src/objects/Training_Unit__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Training_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Available_TU__c</fullName>
        <formula>TotalUnits__c  -  UsedUnits__c  -  CommitedUnits__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available TU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommitedUnits__c</fullName>
        <label>Committed Units</label>
        <summarizedField>Training_Unit_Item__c.TU__c</summarizedField>
        <summaryFilterItems>
            <field>Training_Unit_Item__c.Status__c</field>
            <operation>equals</operation>
            <value>Committed</value>
        </summaryFilterItems>
        <summaryForeignKey>Training_Unit_Item__c.Training_Unit__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>New_Education_Customer_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a flag to indicate when the new education customer email has been sent for these training units.</description>
        <label>New Education Customer Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Training_Units</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <formula>Opportunity__r.Primary_Contact__r.FirstName + &quot; &quot; +  Opportunity__r.Primary_Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalUnits__c</fullName>
        <label>Total Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TrainingManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>TrainingUnits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UsedUnits__c</fullName>
        <label>Used Units</label>
        <summarizedField>Training_Unit_Item__c.TU__c</summarizedField>
        <summaryFilterItems>
            <field>Training_Unit_Item__c.Status__c</field>
            <operation>equals</operation>
            <value>Used</value>
        </summaryFilterItems>
        <summaryForeignKey>Training_Unit_Item__c.Training_Unit__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Enablement &amp; Training Service</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Opportunity__c</columns>
        <columns>TotalUnits__c</columns>
        <columns>UsedUnits__c</columns>
        <columns>CommitedUnits__c</columns>
        <columns>Available_TU__c</columns>
        <columns>Code__c</columns>
        <columns>Primary_Contact__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C{0000}</displayFormat>
        <label>Training Unit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enablement &amp; Training Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>